<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLSales</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="class_txt">分类</string>
    <string name="nearby">附近</string>
    <string name="more">更多</string>
    <string name="home_top_title">世纪联华</string>
    <string name="home_top_search_hint">搜索商品促销信息</string>
    <string name="back">返回</string>
    <string name="attention">关注</string>
    <string name="products_top_title">优惠列表</string>
    <string name="products_area_txt">选择区域</string>
    <string name="products_stores_txt">选择门店</string>
    <string name="products_pre_and_try_txt">优惠/试用</string>
    <string name="exit">退出</string>
    <string name="product_detail_title">促销商品</string>
    <string name="shiyong_get">试用领取</string>
    <string name="get_ma_title">请在试用品领取点出示此二维码，由工作人员扫描确认后，即可领取试用品</string>

    <!-- 我的 -->
    <string name="personal_data">个人资料</string>
    <string name="demo_name">约翰逊·斯嘉丽</string>
    <string name="no_write">未填写</string>
    <string name="save">保存</string>
    <string name="change_name">修改昵称</string>
    <string name="email">E-mail</string>
    <string name="sex">性别</string>
    <string name="area">区域</string>
    <string name="age">年龄</string>
    <string name="reset_password">重设密码</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="complete">完成</string>
    <string name="my_collect">我收藏的</string>
    <string name="my_care">我关注的</string>
    <string name="my_get">我领取的</string>
    <string name="editer">编辑</string>
    <string name="expired">过期</string>
    <string name="no_expired">未过期</string>
    <string name="product_item_name">西瓜500g</string>
    <string name="product_item_old_price">原价：3.50元</string>
    <string name="product_item_new_price">促销价：2.68元</string>
    <string name="product_item_promotion_time">促销时间：2013.05.12-2013.05.18</string>
    <string name="product_item_remind">自动提醒</string>
    <string name="kele_yiping">可口可乐250ML一瓶</string>
    <string name="total_num">总领取份数：50000</string>
    <string name="remain_num">还剩：12560</string>
    <string name="product_item_get_time">领取时间：2013.05.12-2013.05.18</string>
    <string name="get_ma">领取二维码</string>
    <string name="duanwujie_huodong">端午节活动</string>
    <string name="sheng_xian">生鲜</string>
	
    <!-- 分享 -->
    <string name="share">分享</string>
    <string name="share_as_blow">---用以下方式分享---</string>
    <string name="xinlange_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="weixin_tell">微信告诉好友</string>
    <string name="weixin">微信</string>
    <string name="kaixin_web">开心网</string>
    <string name="renren_web">人人网</string>
    <string name="duanxin_tell">短信告诉好友</string>
    <string name="duanxin">短信</string>
    <string name="send">发送</string>
    <string name="share_content">世纪联华XXXX店，现在正在进行可口可乐免费赠饮活动，只要通过手机APP就可以免费领取哦!</string>
</resources>