<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personal_page_bg_color"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_top_bg" >

        <LinearLayout
            android:id="@+id/backInMe"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/home_top_title"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_d_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_line" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>
	
    <EditText 
        android:id="@+id/oldPassword"
        android:layout_marginTop="20dip"
        style="@style/resetPasswordEditStyle"
        android:hint="@string/input_old_password"/>
     <EditText 
        android:id="@+id/firstNewPassword"
        style="@style/resetPasswordEditStyle"
        android:hint="@string/input_new_password"/>
      <EditText 
        android:id="@+id/SecondNewPassword"
        style="@style/resetPasswordEditStyle"
        android:hint="@string/confirm_password"/>
      
      <Button 
          android:id="@+id/completeBtn"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dip"
          android:textSize="22sp"
          android:textColor="@android:color/white"
          android:background="@drawable/my_collect_bg"
          android:gravity="center"
          android:text="@string/complete"/>
</LinearLayout>
