<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_top_bg" >

        <LinearLayout
            android:id="@+id/backInMe"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/home_top_title"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_d_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_line" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/personal_data"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_line" />

        <TextView
            android:id="@+id/exitInMe"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_top_title"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="5dip">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/change_name"/>
        <EditText 
            android:id="@+id/changeName"
            android:layout_width="180dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="5dip">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             android:textSize="16sp"
            android:layout_weight="1"
            android:text="Email"/>
        <EditText 
            android:id="@+id/changeEmail"
            android:layout_width="180dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="5dip">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/sex"/>
        <EditText 
            android:id="@+id/changeName"
            android:layout_width="180dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="5dip">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/area"/>
        <EditText 
            android:id="@+id/changeArea"
            android:layout_width="180dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="5dip">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/age"/>
        <EditText 
            android:id="@+id/changeAge"
            android:layout_width="180dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>