<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/products_item_pic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/list_img" />

            <ImageView
                android:id="@+id/products_item_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="75dip"
                android:src="@drawable/tag01" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/productNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="fill_vertical|left"
                android:text="@string/kele_yiping"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@drawable/list_line" />

            <TextView
                android:id="@+id/producOldPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/total_num"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/productNewPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/remain_num"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@drawable/list_line" />

            <TextView
                android:id="@+id/productPromotionTimeTV"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_item_get_time"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/get_ma" />

                <ImageView 
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/btn_ma"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>