<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp" >

            <ImageView
                android:id="@+id/products_item_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/list_img" />

            <ImageView
                android:id="@+id/products_item_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dip"
                android:src="@drawable/tag01" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/productNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="fill_vertical|left"
                android:text="@string/product_item_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@drawable/list_line" />

            <TextView
                android:id="@+id/producOldPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/product_item_old_price"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/productNewPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/product_item_new_price"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@drawable/list_line" />

            <TextView
                android:id="@+id/productPromotionTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/product_item_promotion_time"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/dott_blue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/product_item_remind" />

                <ToggleButton
                    android:id="@+id/remindBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toogle_btn_press"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>